# ChangeLog for dev-java/maven-bin
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/maven-bin/ChangeLog,v 1.64 2010/10/29 18:47:08 caster Exp $

  29 Oct 2010; Vlastimil Babka <caster@gentoo.org> -maven-bin-2.0.8.ebuild,
  -maven-bin-2.0.9.ebuild, -maven-bin-2.0.10-r1.ebuild,
  maven-bin-2.0.11.ebuild, maven-bin-2.1.0.ebuild, maven-bin-2.2.1.ebuild:
  Add the configuration to CONFIG_PROTECT, bug #342901.

*maven-bin-3.0 (29 Oct 2010)

  29 Oct 2010; Vlastimil Babka <caster@gentoo.org> +maven-bin-3.0.ebuild:
  Version bump, thanks to jieryn in java-experimental overlay.

  25 Jun 2010; Christoph Mende <angelos@gentoo.org> maven-bin-2.0.11.ebuild,
  maven-bin-2.1.0.ebuild, maven-bin-2.2.1.ebuild:
  Stable on amd64 wrt bug #310331

  26 Apr 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  maven-bin-2.0.11.ebuild, maven-bin-2.1.0.ebuild, maven-bin-2.2.1.ebuild:
  x86 stable wrt bug #310331

*maven-bin-2.0.11 (20 Mar 2010)

  20 Mar 2010; Petteri Räty <betelgeuse@gentoo.org>
  +maven-bin-2.0.11.ebuild:
  Version bump. Fixes bug #308961.

  26 Oct 2009; Mounir Lamouri <volkmar@gentoo.org>
  maven-bin-2.0.10-r1.ebuild, maven-bin-2.1.0.ebuild,
  maven-bin-2.2.1.ebuild:
  Re-Keywording for ppc, bug 269616

*maven-bin-2.2.1 (11 Sep 2009)

  11 Sep 2009; Miroslav Šulc <fordfrog@gentoo.org> +maven-bin-2.2.1.ebuild:
  Version bump. maven-2.2.1 contains jdk 1.5 jar so it needs
  >=virtual/jdk-1.5

*maven-bin-2.1.0 (12 May 2009)
*maven-bin-2.0.10-r1 (12 May 2009)

  12 May 2009; Alistair Bush <ali_bush@gentoo.org>
  +maven-bin-2.0.10-r1.ebuild, +maven-bin-2.1.0.ebuild:
  Add support for eselect-maven. Required as mvn have made possible
  incompatiable changes to 2.1.

  27 Apr 2009; Brent Baude <ranger@gentoo.org> maven-bin-2.0.10.ebuild:
  Marking maven-bin-2.0.10 ppc for bug 265108

  18 Apr 2009; Markus Meier <maekke@gentoo.org> maven-bin-2.0.10:
  amd64/x86 stable, bug #265018

*maven-bin-2.0.10 (04 Mar 2009)
